--- a/client/package.json
+++ b/client/package.json
@@ -18,11 +18,13 @@
     "core-js": "^3.8.3",
     "datatables.net-bs5": "^1.13.8",
     "docx": "^8.5.0",
+    "docx-pdf": "^0.0.1",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "file-saver": "^2.0.5",
     "fs": "^0.0.1-security",
     "jquery": "^3.7.1",
+    "jspdf": "^2.5.1",
     "promise": "^8.3.0",
     "url": "^0.11.3",
     "vue": "^3.2.13",
