--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,8 @@
     "body-parser": "^1.20.2",
     "buffer": "^6.0.3",
     "core-js": "^3.8.3",
-    "datatables.net-bs5": "^1.13.8",
+    "datatables.net-bs5": "^1.13.10",
+    "datatables.net-buttons-bs5": "^3.0.0",
     "docx": "^8.5.0",
     "docx-pdf": "^0.0.1",
     "dotenv": "^16.4.1",
@@ -25,6 +26,8 @@
     "fs": "^0.0.1-security",
     "jquery": "^3.7.1",
     "jspdf": "^2.5.1",
+    "jszip": "^3.10.1",
+    "pdfmake": "^0.2.9",
     "promise": "^8.3.0",
     "url": "^0.11.3",
     "vue": "^3.2.13",
