--- a/package.json
+++ b/package.json
@@ -16,10 +16,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@nativedocuments/docx-wasm": "^2.2.13-1561490777",
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
-    "pg": "^8.11.3"
+    "express-handlebars": "^7.1.2",
+    "fs": "^0.0.1-security",
+    "fs-extra": "^11.2.0",
+    "handlebars": "^4.7.8",
+    "moment": "^2.30.1",
+    "path": "^0.12.7",
+    "pdfkit": "^0.14.0",
+    "pg": "^8.11.3",
+    "puppeteer": "^22.1.0"
   }
 }
